// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Admin/FormsReady should add a notice and disable post updating when user email field is deleted 1`] = `"User Email is a required field.<button type=\\"button\\" class=\\"components-button components-notice__action is-secondary\\">Restore user email field?</button>"`;

exports[`Admin/FormsReady should deregister most WP core blocks 1`] = `
Array [
  "Columns",
  "Custom HTML",
  "Group",
  "Heading",
  "Image",
  "Paragraph",
  "Separator",
  "Spacer",
  "User Address",
  "User Display Name",
  "User Email",
  "User Login",
  "User Password",
  "User Phone",
  "User name",
  "Voucher Code Redemption",
]
`;

exports[`Admin/FormsReady should deregister user login block on account edit forms 1`] = `
Array [
  "Columns",
  "Custom HTML",
  "Group",
  "Heading",
  "Image",
  "Paragraph",
  "Separator",
  "Spacer",
  "User Address",
  "User Display Name",
  "User Email",
  "User Login",
  "User Password",
  "User Phone",
  "User name",
  "Voucher Code Redemption",
]
`;

exports[`Admin/FormsReady should deregister user login block on account edit forms 2`] = `
Array [
  "Columns",
  "Custom HTML",
  "Group",
  "Heading",
  "Image",
  "Paragraph",
  "Separator",
  "Spacer",
  "User Address",
  "User Display Name",
  "User Email",
  "User Password",
  "User Phone",
  "User name",
]
`;

exports[`Admin/FormsReady should deregister user login block on account edit forms 3`] = `
Array [
  "Columns",
  "Custom HTML",
  "Group",
  "Heading",
  "Image",
  "Paragraph",
  "Separator",
  "Spacer",
  "User Address",
  "User Display Name",
  "User Email",
  "User Login",
  "User Password",
  "User Phone",
  "User name",
]
`;

exports[`Admin/FormsReady should deregister voucher block on checkout and account edit forms 1`] = `
Array [
  "Columns",
  "Custom HTML",
  "Group",
  "Heading",
  "Image",
  "Paragraph",
  "Separator",
  "Spacer",
  "User Address",
  "User Display Name",
  "User Email",
  "User Login",
  "User Password",
  "User Phone",
  "User name",
  "Voucher Code Redemption",
]
`;

exports[`Admin/FormsReady should deregister voucher block on checkout and account edit forms 2`] = `
Array [
  "Columns",
  "Custom HTML",
  "Group",
  "Heading",
  "Image",
  "Paragraph",
  "Separator",
  "Spacer",
  "User Address",
  "User Display Name",
  "User Email",
  "User Password",
  "User Phone",
  "User name",
]
`;

exports[`Admin/FormsReady should deregister voucher block on checkout and account edit forms 3`] = `
Array [
  "Columns",
  "Custom HTML",
  "Group",
  "Heading",
  "Image",
  "Paragraph",
  "Separator",
  "Spacer",
  "User Address",
  "User Display Name",
  "User Email",
  "User Login",
  "User Password",
  "User Phone",
  "User name",
]
`;
